Add userType
